tests/errors/error_field_access.nimmy
# Error: Accessing field on non-object
let x = 42
echo x.foo